Rename project from Elinor Reloaded to Market Toolbox and update related files
- Changed project name in index.html, package.json, and Cargo.toml.
- Updated README and icon generation scripts to reflect the new project name.
- Modified Tauri configuration and status bar title for consistency.
- Enhanced OverviewTab component layout for better display of market data.
- Added window state management to preserve user settings for window position and size.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "elinor_reloaded"
+name = "market_toolbox"
 version = "1.0.0"
 description = "Trading tool for Eve Online"
 authors = ["you"]
 edition = "2021"
 
 [lib]
-name = "elinor_reloaded_lib"
+name = "market_toolbox_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
